--- a/src/ape/package.json
+++ b/src/ape/package.json
@@ -14,6 +14,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "acorn": "^7.1.1",
+    "acron": "^1.0.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
