--- a/src/ape/package.json
+++ b/src/ape/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "acorn": "^7.1.1",
+    "acorn-jsx": "^5.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
